# bayan

./: .gitignore  ADAPTIVE_MATHEMATICAL_AI_CORE.md  ADAPTIVE_MATHEMATICAL_AI_GUIDE.md  AGENT_ANALYSIS_FINAL_REPORT.txt  AGENT_CLEANUP_PLAN.md  AGENT_DETAILED_COMPARISON.md  AGENT_MIGRATION_ANALYSIS.md  AGENT_MIGRATION_COMPLETED.md  AGENT_MIGRATION_EXECUTIVE_BRIEF.md  AGENT_MIGRATION_PLAN.md  AGENT_MIGRATION_SUMMARY.md  AI_INTEGRATION_GUIDE.md  ALBAYAN_COMPREHENSIVE_OVERVIEW.md  ALBAYAN_FEATURES_ANALYSIS.md  ANIMATION_DEVELOPER_ANSWER.md  ARTISTIC_AI_REVOLUTION_COMPLETE.md  BEGINNER_COMPLETE_ANSWER.md  BUILD_AND_DISTRIBUTION_GUIDE.md  BUILD_EXECUTABLE_ANSWER.md  CHANGELOG.md  COMPLETE_DEMO_REPORT.md  COMPLETE_KEYWORDS_VERIFICATION.md  COMPLETE_PROJECT_ROADMAP.md  COMPREHENSIVE_AI_EXAMPLES_COMPLETE.md  COMPREHENSIVE_MATH_AI_ROADMAP.md  COMPREHENSIVE_PROJECT_MEMORY_BANK.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  DATABASE_DEVELOPER_ANSWER.md  DATABASE_PERSISTENCE_GUIDE.md  DEVELOPER_GUIDE.md  DEVELOPER_SHOWCASE_GUIDE.md  DOCUMENTATION_INDEX.md  DRAWING_ANSWER_FOR_FOLLOWER.md  ENHANCED_ARTISTIC_REVOLUTION_COMPLETE.md  EXPERT_FEEDBACK_ROUND_10_STRUCT_COMPLETE.md  EXPERT_FEEDBACK_ROUND_11_MATCH_IR_COMPLETE.md  EXPERT_FEEDBACK_ROUND_12_MATCH_PHI_COMPLETE.md  EXPERT_FEEDBACK_ROUND_13_BORROW_CHECKER_PHASE1_COMPLETE.md  (+106 more)
.github/: pull_request_template.md
albayan-language-support/: language-configuration.json  package.json
albayan_runtime/: Cargo.toml
albayan_runtime/src/: ai.rs  api.rs  baserah_semantic_system.rs  knowledge_base.rs  knowledge_engine.rs  lib.rs  linguistic_db.rs  linguistic_intelligence.rs  math_ai_engine.rs  nlu_engine.rs  shape_inference.rs  shape_inference_engine.rs  solver.rs  thinking_core.rs  torch.rs  unification.rs
docker/: Dockerfile.urgent  entrypoint.sh
docs/: ADAPTIVE_AI_WHITEPAPER.md  AGENT_INTELLIGENT_MODEL_BRIEFING.md  ANIMATION_DEVELOPER_GUIDE.md  ARTISTIC_LIBRARIES_GUIDE.md  BEGINNER_PROGRAMMING_GUIDE.md  BUILTIN_LIBRARIES_GUIDE.md  DATABASE_STATISTICS_DEVELOPER_GUIDE.md  DEVELOPER_AI_EXAMPLES_GUIDE.md  DEVELOPER_OUTREACH_STRATEGY.md  DRAWING_GUIDE.md  ENHANCED_SHAPES_DATABASE_GUIDE.md  IMMEDIATE_ACTION_PLAN.md  QUICK_START_GUIDE.md  README.md  README_COMPREHENSIVE.md  SOCIAL_MEDIA_CONTENT_BANK.md  USER_GUIDE_AR.md  api_reference.md  developer_guide.md
examples/: AMAZING_DEMO.ab  AMAZING_SHOWCASE.ab  ARRAY_OPERATIONS_DEMO.ab  BASIC_SHOWCASE.ab  COMPREHENSIVE_TEST.ab  DEVELOPER_DEMO.ab  FIBONACCI_DEMO.ab  FINAL_SHOWCASE.ab  HELLO_SHOWCASE.ab  IMPRESSIVE_SHOWCASE.ab  INTERACTIVE_SHOWCASE.ab  MATH_OPERATIONS_DEMO.ab  README.md  SHOWCASE_DEMO.ab  SIMPLE_SHOWCASE.ab  SIMPLE_TEST.ab  ULTIMATE_SHOWCASE.ab  WORKING_SHOWCASE.ab  adaptive_ai_demo.ab  adaptive_math_ai_simple.ab  adaptive_mathematical_ai.ab  advanced_features_test.ab  advanced_functions.ab  advanced_math_examples.ab  agent_cli.ab  ai.ab  ai_medical_diagnosis.ab  albayan_benefits.ab  albayan_showcase.ab  albayan_vs_others.ab  animation_studio_system.ab  artistic_ai_demo.ab  (+101 more)
(+265 files in other folders)
